[package]
name = "louis"
version = "0.6.2"
authors = ["muvlon <muvlon@hentzes.de>"]
description = "Rusty Bindings to liblouis"
repository = "https://github.com/whentze/liblouis-rust"
categories = ["api-bindings", "text-processing", "localization", "encoding"]
readme = "README.md"
license = "GPL-3.0"
keywords = ["braille", "accessibility", "translation"]
edition = "2024"

[workspace]
members = [
    "louis-sys",
]

[badges]
gitlab = { repository = "whentze/liblouis-rust" }

[dependencies]
louis-sys = { path = "louis-sys", version = "0.6.0" }
semver = "1.0.26"
widestring = "1.2.0"
log = "0.4.27"

[dev-dependencies]
lazy_static = "1.5.0"
clap = "4.5.40"
pretty_env_logger = "0.5.0"
assert_cmd = "2.0.17"
