[package]
name = "louis-sys"
version = "0.6.1"
authors = ["muvlon <muvlon@hentzes.de>"]
description = "Bindings to liblouis (low-level crate)"
repository = "https://github.com/whentze/liblouis-rust/tree/master/louis-sys"
categories = ["external-ffi-bindings", "text-processing", "localization", "encoding"]
readme = "README.md"
license = "GPL-3.0"
links = "louis"
edition = "2024"

[dependencies]

[build-dependencies]
bindgen = "0.72.0"
pkg-config = "0.3.32"
autotools = "0.2.7"
log = "0.4.27"

[dev-dependencies]
semver-parser = "0.10.3"
lazy_static = "1.5.0"
